--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   <body>
     <h1>Header 1</h1>
     Hello there, awesome person!
+    <img src="https://avatars.githubusercontent.com/u/77001546?v=4">
   </body>
 </html>
