--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
     <h1>Header 1</h1>
     Hello there, awesome person!
     <img src="https://avatars.githubusercontent.com/u/77001546?v=4">
+    <ol>
+      <li>google.com</li>
+      <li>youtube.com</li>
+      <li>amazon.com</li>
+    </ol>
   </body>
 </html>
