--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     Hello there, awesome person!
     <img src="https://avatars.githubusercontent.com/u/77001546?v=4">
     <ol>
-      <li>google.com</li>
-      <li>youtube.com</li>
-      <li>amazon.com</li>
+      <li><a href="www.google.com">google.com</a></li>
+      <li><a href="youtube.com">youtube.com</a></li>
+      <li><a href="http://amazon.com">amazon.com</a></li>
     </ol>
   </body>
 </html>
